# wrapunpopular

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: chunk_csv_chunks.py  howto.md  run_many_ticids.py  run_scocen_quicklook_chunks.sh  run_single_tic_id.py  run_tic_460205581.py
tests/: test_integration.py
wrapunpopular/: __init__.py  core.py
