[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrapunpopular"
version = "0.1.0"
description = "Helpers around unpopular for generating TESS light curves."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "wrapunpopular maintainers" },
]
dependencies = [
    "astroquery",
    "astrocut",
    "astropy",
    "matplotlib",
    "numpy",
    "pandas",
    "tess-point",
]

[project.urls]
Homepage = "https://github.com/example/wrapunpopular"
